@@ -3,11 +3,10 @@ package com.tsoft.civilization.unit.action;
 import com.tsoft.civilization.L10n.unit.L10nUnit;
 import com.tsoft.civilization.action.ActionAbstractResult;
 import com.tsoft.civilization.unit.AbstractUnit;
-import com.tsoft.civilization.unit.UnitCollection;
 import com.tsoft.civilization.unit.UnitList;
 import com.tsoft.civilization.util.Format;
 import com.tsoft.civilization.util.Point;
-import com.tsoft.civilization.web.view.JSONBlock;
+import com.tsoft.civilization.web.view.JsonBlock;
 
 import java.util.Collection;
 import java.util.List;
@@ -16,7 +15,7 @@ import java.util.UUID;
 public class CaptureUnitAction {
     public static final String CLASS_UUID = UUID.randomUUID().toString();
 
-    public static ActionAbstractResult capture(AbstractUnit<?> attacker, Point location) {
+    public static ActionAbstractResult capture(AbstractUnit attacker, Point location) {
         ActionAbstractResult result = canCapture(attacker);
         if (result.isFail()) {
             return result;
@@ -31,7 +30,7 @@ public class CaptureUnitAction {
             return CaptureUnitActionResults.NOTHING_TO_CAPTURE;
         }
 
-        AbstractUnit<?> foreignUnit = getTargetToCaptureAtLocation(attacker, location);
+        AbstractUnit foreignUnit = getTargetToCaptureAtLocation(attacker, location);
         if (foreignUnit == null) {
             return CaptureUnitActionResults.NO_LOCATIONS_TO_CAPTURE;
         }
@@ -45,7 +44,7 @@ public class CaptureUnitAction {
         return CaptureUnitActionResults.FOREIGN_UNIT_CAPTURED;
     }
 
-    public static ActionAbstractResult canCapture(AbstractUnit<?> attacker) {
+    public static ActionAbstractResult canCapture(AbstractUnit attacker) {
         if (attacker == null || attacker.isDestroyed()) {
             return CaptureUnitActionResults.ATTACKER_NOT_FOUND;
         }
@@ -58,8 +57,8 @@ public class CaptureUnitAction {
         return CaptureUnitActionResults.CAN_CAPTURE;
     }
 
-    private static UnitCollection getTargetsToCapture(AbstractUnit capturer) {
-        UnitCollection units = new UnitList();
+    private static UnitList<?> getTargetsToCapture(AbstractUnit capturer) {
+        UnitList<?> units = new UnitList<>();
 
         Collection<Point> locations = capturer.getTilesMap().getLocationsAround(capturer.getLocation(), 1);
         for (Point location : locations) {
@@ -69,7 +68,7 @@ public class CaptureUnitAction {
                 continue;
             }
 
-            AbstractUnit<?> foreignUnit = getTargetToCaptureAtLocation(capturer, location);
+            AbstractUnit foreignUnit = getTargetToCaptureAtLocation(capturer, location);
             if (foreignUnit != null) {
                 units.add(foreignUnit);
             }
@@ -78,32 +77,32 @@ public class CaptureUnitAction {
         return units;
     }
 
-    public static AbstractUnit<?> getTargetToCaptureAtLocation(AbstractUnit<?> capturer, Point location) {
-        UnitCollection foreignUnits = capturer.getWorld().getUnitsAtLocation(location, capturer.getCivilization());
+    public static AbstractUnit getTargetToCaptureAtLocation(AbstractUnit capturer, Point location) {
+        UnitList<?> foreignUnits = capturer.getWorld().getUnitsAtLocation(location, capturer.getCivilization());
 
         // if there are military units, protecting the civilians, then there is nothing to capture
         if (foreignUnits.size() != 1) {
             return null;
         }
 
-        AbstractUnit<?> foreignUnit = foreignUnits.get(0);
+        AbstractUnit foreignUnit = foreignUnits.getFirst();
         if (foreignUnit.canBeCaptured()) {
             return foreignUnit;
         }
         return null;
     }
 
-    public static List<Point> getLocationsToCapture(AbstractUnit<?> unit) {
-        UnitCollection units = getTargetsToCapture(unit);
+    public static List<Point> getLocationsToCapture(AbstractUnit unit) {
+        UnitList<?> units = getTargetsToCapture(unit);
         return units.getLocations();
     }
 
-    private static String getClientJSCode(AbstractUnit<?> unit) {
-        JSONBlock block = new JSONBlock('\'');
+    private static String getClientJSCode(AbstractUnit unit) {
+        JsonBlock block = new JsonBlock('\'');
         block.startArray("locations");
         List<Point> locations = getLocationsToCapture(unit);
         for (Point loc : locations) {
-            JSONBlock locBlock = new JSONBlock('\'');
+            JsonBlock locBlock = new JsonBlock('\'');
             locBlock.addParam("col", loc.getX());
             locBlock.addParam("row", loc.getY());
             block.addElement(locBlock.getText());
@@ -122,7 +121,7 @@ public class CaptureUnitAction {
         return L10nUnit.CAPTURE_DESCRIPTION.getLocalized();
     }
 
-    public static StringBuilder getHtml(AbstractUnit<?> attacker) {
+    public static StringBuilder getHtml(AbstractUnit attacker) {
         if (canCapture(attacker).isFail()) {
             return null;
         }
